--- a/week3/style.css
+++ b/week3/style.css
@@ -1,8 +1,10 @@
 body, html{
     display: flex;
     justify-content: center;
-    background-color: burlywood;
+    background-color:blueviolet;
+    font-family: 'Courier New', Courier, monospace;
 }
+
 #container{
     width: 1000px;
     padding: 10px;
@@ -10,19 +12,66 @@ body, html{
 }
 
 header, nav, section, footer{
-    border: 1px solid grey;
-    width: 100%
+    border: 1px solid gray;
+    width: 100%;
 }
+
+header{
+    height: 130px;
+}
+
 h1{
     width: 700px;
     float: left;
+    line-height: 90px;
+    margin-left: 10px;
 }
+
 #header-img{
     float: left;
-    border: solid purple;
+    border:1px solid purple;
     justify-content: right;
+    margin-top: 10px;
 }
-ul{
-    list-style: none;
+
+nav{
+    text-align: center;
 }
+
+.nav-list {
+    list-style:none;
+    display: inline;
+    text-align: center;
+}
+
+.btn:link{
+    width:100px;
+    text-decoration: none;
+    height: 30px;
+    background-color: rgb(65, 0, 126);
+    color: white;
+    border: 2px solid rgb(34, 6, 126);
+
+}
+
+.btn:visited{
+    width:100px;
+    text-decoration: none;
+    height: 30px;
+    background-color: rgb(65, 0, 126);
+    color: white;
+    border: 2px solid rgb(34, 6, 126);
+
+}
+
+.btn:hover{
+    width:100px;
+    text-decoration: none;
+    height: 30px;
+    background-color: rgb(166, 114, 214);
+    color: white;
+    border: 2px solid rgb(34, 6, 126);
+}
+
+
 
